Prevent jumping of clock ui in animation

--- a/src/components/clock/NewClock.scss
+++ b/src/components/clock/NewClock.scss
@@ -45,6 +45,8 @@
         font-size: 36px;
         font-weight: 400;
         line-height: 1em;
+        overflow: hidden;
+        white-space: nowrap;
 
         @media (max-width: 1200px) {
           font-size: 30px;
@@ -65,6 +67,7 @@
         justify-content: space-between;
         align-items: center;
         gap: 10px;
+        overflow: hidden;
 
         .Or {
           color: var(--icon-primary);
@@ -82,6 +85,7 @@
           color: var(--text-primary);
           font-size: 30px;
           font-weight: 400;
+          white-space: nowrap;
 
           @media (max-width: 1200px) {
             font-size: 26px;
